# MonoFocus

./: .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TESTING.md  UPDATER_SETUP.md  VERSION_MANAGEMENT.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
icons/: README.md
scripts/: release.js  update-version.js
src/: i18n.js  index.html  main.js  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  monitor.rs  mouse_watcher.rs  overlay.rs  tray.rs
